# coffeeshop2.0

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/coffeemakers/: CMakeLists.txt  frother.cppm
src/domain/: CMakeLists.txt  coffee_beans.cppm  coffee_grinder.cppm  manual_coffee_grinder.cppm
src/ingredients/: CMakeLists.txt  liquid.cppm
tests/: CMakeLists.txt
tests/coffeemakers/: CMakeLists.txt  frother_tests.cpp
tests/domain/: CMakeLists.txt  coffee_beans_tests.cpp  manual_coffee_grinder_tests.cpp
tests/ingredients/: CMakeLists.txt  liquid_tests.cpp
